--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-./node_modules
-./"Documento sem título 1"
+
+# node modulo
+./node_modules/
+
+#ficheiro q eu criei
+./Documentosemtítulo1.txt
